
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(app/conn_server)
ADD_SUBDIRECTORY(app/dispatch)
ADD_SUBDIRECTORY(app/login_server)
ADD_SUBDIRECTORY(app/monitor)
ADD_SUBDIRECTORY(app/msg_server)
#ADD_SUBDIRECTORY(broadcast)
ADD_SUBDIRECTORY(app/loadbalance)
ADD_SUBDIRECTORY(app/buddy_server)
ADD_SUBDIRECTORY(app/group_server)
ADD_SUBDIRECTORY(app/monitor/client)

